# DIFFuzzer

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  log4rs.yml
bin-hasher/: Cargo.toml
dash/: Cargo.toml
dash/src/: args.rs  lib.rs  main.rs  test.rs
dif-fuzzer/: Cargo.toml
diffuzzer/: Cargo.toml
diffuzzer/src/: args.rs  command.rs  compile.rs  config.rs  event.rs  filesystems.rs  main.rs  markdown.rs  path.rs  qemu.rs  reason.rs  save.rs  supervisor.rs
diffuzzer/src/abstract_fs/: content.rs  encode.rs  flags.rs  fs.rs  generator.rs  mod.rs  mutator.rs  node.rs  operation.rs  pathname.rs  trace.rs  workload.rs
diffuzzer/src/fuzzing/: broker.rs  duo_single.rs  fuzzer.rs  harness.rs  mod.rs  outcome.rs  reducer.rs  runner.rs  solo_single.rs
diffuzzer/src/fuzzing/blackbox/: broker.rs  fuzzer.rs  mod.rs  native.rs  qemu.rs
diffuzzer/src/fuzzing/greybox/: broker.rs  fuzzer.rs  mod.rs  mutator.rs  schedule.rs  seed.rs
diffuzzer/src/fuzzing/greybox/feedback/: kcov.rs  lcov.rs  mod.rs
diffuzzer/src/fuzzing/hasher_tests/: tests.rs
diffuzzer/src/fuzzing/objective/: dash.rs  hash.rs  mod.rs  trace.rs
diffuzzer/src/fuzzing/observer/: dash.rs  lcov.rs  mod.rs
diffuzzer/src/mount/: bcachefs.rs  btrfs.rs  ext4.rs  f2fs.rs  littlefs.rs  mod.rs  mount.rs  xfs.rs
docs/: Filesystems.md  Internal.md  Kernel.md  QEMU.md
executor/: executor.cpp  executor.h  makefile  test.c
hasher/: Cargo.toml
hasher/src/: args.rs  filesystems.rs  lib.rs  main.rs  test.rs
hasher/src/mount/: btrfs.rs  ext4.rs  f2fs.rs  mount.rs  xfs.rs
src/: abstract_fs.rs  args.rs  command.rs  compile.rs  config.rs  (+12 more)
(+137 files in other folders)
