[package]
name = "dif-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
log = "0.4.22"
log4rs = "1.3.0"
rand = "0.8.5"
regex = "1.11.1"
serde = "1.0.215"
serde_json = "1.0.133"
siphasher = "1.0.1"
thiserror = "2.0.9"
toml = "0.8.19"
