[package]
name = "dash"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
twox-hash = "2.1.0"
regex = "1.11.1"
walkdir = "2.5.0"
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "4.5.35", features = ["derive", "string"] }
