[package]
name = "diffuzzer"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.97"
base64 = "0.22.1"
bincode = "1.3.3"
clap = { version = "4.5.35", features = ["derive", "string"] }
log = "0.4.27"
log4rs = "1.3.0"
rand = "0.9.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
siphasher = "1.0.1"
thiserror = "2.0.12"
toml = "0.8.20"
walkdir = "2.5.0"
twox-hash = "2.1.0"
dash = { path = "../dash" }
