[package]
name = "hasher"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
twox-hash = "2.1.0"
regex = "1.11.1"
walkdir = "2.5.0"
anyhow = "1.0.95"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive", "string"] }

